# gitlearn

./: .clang-format  .gitignore  IntMaxHeap  README.md  a.out  ecrets --scan-historyq
Algorithm/01.Leetcode/: 35.搜索插入位置.cpp  367.有效的完全平方数.cpp  69.x-的平方根.cpp  69.x-的平方根.py  delete_repeat_nums.c
Algorithm/Double_Pointer/: container_with_most_water.c
Algorithm/Heap/: IntMaxHeap.cpp
Algorithm/Queue/: queue.cpp
Algorithm/arithmetic/: arithmetic.cpp
Algorithm/binary_tree/: binary_tree.c  binary_tree.h
Algorithm/dp/: minimal_distance.cpp
Algorithm/gcd/: gcd.c  test_gcd.c
Algorithm/gdc/: gcd.h
Algorithm/recursion/: fact.c
Algorithm/sort/: a.out  bubble_sort.c  bubble_sort.h  (+1 more)
C/: a.c  a.h  c_object.c  myAtoi.c  test  tmp.c
C++/: helloworld.cpp  new-memory.cpp
C++/Others/Unit_Tesing/example1/: CMakeLists.txt
C++/Others/Unit_Tesing/example1/src/: factorial.cpp
C++/Others/Unit_Tesing/example1/tests/: factorial_test.cpp
C/SIMD/: avx_exp  (+6 more)
JavaScript/: 1.helloworld.html
Leetcode/: 19.删除链表的倒数第-n-个结点.c  209.长度最小的子数组.cpp  26.删除有序数组中的重复项.cpp  27.移除元素.cpp  27.移除元素.py  283.移动零.cpp  704.二分查找.cpp  704.二分查找.py  844.比较含退格的字符串.cpp  904.水果成篮.cpp  977.有序数组的平方.cpp
Leetcode-C/: delete_repeat_nums.c
Nowcoder/: hj10.c
Python/: decorator-function.py  dynamic_add_attr.py  filter-funcation.py  object-test-student.py  partial-funcations.py  some-recursive-funcation.py  temp.py
Shell/: quick_git_push
Sqlite/: first  school.db
c++/: a.out  helloworld.cpp  new-memory.cpp
leetcode-C/: 19.删除链表的倒数第-n-个结点.c
shell/: fix-github-private-email.sh  quick_git_push  test.sh
(+608 files in other folders)
